--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Week 1 homework</title>
+    <title>Week 2 homework</title>
     <style>
       :root {
         --primary-color: teal;
@@ -113,6 +113,15 @@
           <a href="about.html#email">Contact Me </a>
         </button>
         <button class="about-button"><a href="about.html"> About Me</a></button>
+      </div>
+      <hr />
+      <div class="row" class="nav-buttons">
+        <div class="col-6">
+          <button type="button" class="btn btn-primary">Primary</button>
+        </div>
+        <div class="col-6">
+          <button type="button" class="btn btn-info">Info</button>
+        </div>
       </div>
       <hr />
     </div>
