--- a/about.html
+++ b/about.html
@@ -22,40 +22,36 @@
         --text-align: center;
       }
       body {
-        margin: 60px auto;
-        max-width: 800px;
+        margin: 0 auto;
+      }
+       hr {
+        color: #ee75b3;
+        border: solid 3px;
       }
 
-      .content {
-        display: flex;
-        margin: 30px 0px 30px 0px;
-        justify-content: space-between;
-      }
       p {
-        background-color: pink;
-        padding: 20px;
-        border-radius: 4px;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 1.5;
-        text-align: var(--text-align);
+        color: blue;
       }
-      .content p {
-        margin: 10px;
-      }
+
       h1 {
-        color: var(--primary-color);
+        color: hsl(0 0% 100% / 0.2);
+        background-clip: text;
+        background-image: linear-gradient(pink, magenta, blue);
         font-weight: 900;
-        font-size: 80px;
+        font-size: 70px;
         text-align: var(--text-align);
       }
       h2 {
         color: var(--secondary-color);
-        font-weight: 700;
-        font-size: 50px;
+        font-size: 35px;
         text-align: var(--text-align);
       }
       h3 {
-        color: var(--primary-color);
+        color: hsl(0 0% 100% / 0.2);
+        background-clip: text;
+        background-image: linear-gradient(pink, magenta, blue);olor);
         font-weight: 600;
         font-size: 60px;
         text-align: var(--text-align);
@@ -74,6 +70,14 @@
       }
       .navbar-pink {
         background-color: pink;
+      }
+      .huskers {
+        color: hsl(0 0% 100% / 0.2);
+        background-clip: text;
+        background-image: linear-gradient(black, silver, red);
+      }
+      .pics {
+        border: white solid 3px;
       }
     </style>
   </head>
@@ -116,15 +120,40 @@
         </nav>
       </header>
       <h1>About Me</h1>
-      <h2>Front End Developer From Nebraska</h2>
-      <div class="content">
+      <h2>Front End Developer From <span class="huskers"> Nebraska</span></h2>
+      <br />
+      <div class="">
         <p>
-          I am a single mom just trying to provide the best life for my son.
-        </p>
-        <p>
-          My hobbies include crafting, my etsy shop, gaming, biking, reading,
+          I am a single mom just trying to provide the best life for my son. My
+          hobbies include crafting, my etsy shop, gaming, biking, reading,
           Jouarnaling, watching hockey, and sports betting!
         </p>
+      </div>
+      <br />
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4 pics">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/736/original/Screenshot_2023-12-30_at_4.00.14_PM.png?1703973641"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-sm-4 pics">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/734/original/Screenshot_2023-12-30_at_3.53.20_PM.png?1703973229"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+          <div class="col-sm-4 pics">
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/730/original/Screenshot_2023-12-17_at_8.34.24_PM.png?1703971126"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+        </div>
       </div>
       <br />
       <br />
