--- a/about.html
+++ b/about.html
@@ -14,7 +14,8 @@
     ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Me</title>
+    <title>About Me - Alesia Shope</title>
+    <meta name="description" content="about me page of my portfolio" />
     <style>
       :root {
         --primary-color: teal;
@@ -135,21 +136,21 @@
           <div class="col-sm-4 pics">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/736/original/Screenshot_2023-12-30_at_4.00.14_PM.png?1703973641"
-              alt=""
+              alt="tamale site"
               class="img-fluid"
             />
           </div>
           <div class="col-sm-4 pics">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/734/original/Screenshot_2023-12-30_at_3.53.20_PM.png?1703973229"
-              alt=""
+              alt="crafting site"
               class="img-fluid"
             />
           </div>
           <div class="col-sm-4 pics">
             <img
               src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/730/original/Screenshot_2023-12-17_at_8.34.24_PM.png?1703971126"
-              alt=""
+              alt="weather site"
               class="img-fluid"
             />
           </div>
@@ -160,7 +161,7 @@
 
       <h3 id="Contact">Contact Me</h3>
       <div class="email">
-        <a href="mailto:alesianicoleg@gmail.com" id="email">
+        <a href="mailto:alesianicoleg@gmail.com" id="email" title="email">
           alesianicoleg@gmail.com</a
         >
       </div>
