about me pg updates

--- a/about.html
+++ b/about.html
@@ -80,6 +80,13 @@
       .pics {
         border: white solid 3px;
       }
+      .card{
+        border: none;
+        text-align: center
+      }
+      .card-title{
+        font-size: 30px;
+      }
     </style>
   </head>
   <body>
@@ -123,40 +130,35 @@
       <h1>About Me</h1>
       <h2>Front End Developer From <span class="huskers"> Nebraska</span></h2>
       <br />
-      <div class="">
-        <p>
-          I am a single mom just trying to provide the best life for my son. My
-          hobbies include crafting, my etsy shop, gaming, biking, reading,
-          Jouarnaling, watching hockey, and sports betting!
-        </p>
-      </div>
+
       <br />
       <div class="container">
         <div class="row">
-          <div class="col-sm-4 pics">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/736/original/Screenshot_2023-12-30_at_4.00.14_PM.png?1703973641"
-              alt="tamale site"
-              class="img-fluid"
-            />
+          <div class="col-6">
+            <div class="card" style="width: 18rem">
+              <div class="card-body">
+                <h5 class="card-title">Alesia Shope</h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">
+                  Front End Developer
+                </h6>
+                <p class="card-text">
+                  I am a single mom just trying to provide the best life for my
+                  son. My hobbies include: my etsy shop, crafting, gaming,
+                  biking, reading, Jouarnaling, watching hockey, and sports
+                  betting!
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="col-sm-4 pics">
+          <div class="col-6">
             <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/734/original/Screenshot_2023-12-30_at_3.53.20_PM.png?1703973229"
-              alt="crafting site"
-              class="img-fluid"
-            />
-          </div>
-          <div class="col-sm-4 pics">
-            <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/108/730/original/Screenshot_2023-12-17_at_8.34.24_PM.png?1703971126"
-              alt="weather site"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/110/764/original/341863436_1441131320025542_6736440762171132295_n.jpeg?1705341776"
+              alt="Me wearing shades and wearing an avs jersey"
               class="img-fluid"
             />
           </div>
         </div>
       </div>
-      <br />
       <br />
 
       <h3 id="Contact">Contact Me</h3>
