about page updates

--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
         margin: 0;
         display: block;
         text-align: center;
+        color: black;
       }
       .email {
         padding: 0;
@@ -86,6 +87,11 @@
       }
       .card-title{
         font-size: 30px;
+      }
+      .contact-button {
+        background-color: pink;
+        border-radius: 10px;
+        font-size: 25px;
       }
     </style>
   </head>
@@ -147,13 +153,16 @@
                   biking, reading, Jouarnaling, watching hockey, and sports
                   betting!
                 </p>
+                <button type="button" class="btn btn-pink contact-button">
+                  <a href="about.html#email"> Work</a>
+                </button>
               </div>
             </div>
           </div>
           <div class="col-6">
             <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/110/764/original/341863436_1441131320025542_6736440762171132295_n.jpeg?1705341776"
-              alt="Me wearing shades and wearing an avs jersey"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/110/768/original/416123724_10108477079566583_892026255370384064_n.jpeg?1705348170"
+              alt="Me in a vegas knights jersey"
               class="img-fluid"
             />
           </div>
