added projects page

--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
                   <a class="nav-link" href="about.html"> About Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html#email"> Contact Me</a>
+                  <a class="nav-link" href="projects.html">Projects</a>
                 </li>
               </ul>
             </div>
