--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     />
     <style>
       :root {
-        --primary-color: #65e8e8;
+        --primary-color:  color: hsl(0 0% 100% / 0.2);
+        background-clip: text;
+        background-image: linear-gradient(pink, magenta, blue);
         --secondary-color: #ee75b3;
         --text-align: center;
       }
@@ -136,7 +138,7 @@
                 <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html#email">Contact</a>
+                <a class="nav-link" href="projects.html">Projects</a>
               </li>
             </ul>
           </div>
@@ -181,7 +183,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Tamale site</h5>
                   <p class="card-text">
-                    To build this site I used HTML, CSS, and Javascript.
+                    I used HTML, CSS, and Javascript to build this site.
                   </p>
                   <button class="btn about-button" type="submit">
                     <a
@@ -207,8 +209,8 @@
                 <div class="card-body">
                   <h5 class="card-title">Crafting</h5>
                   <p class="card-text">
-                    To build this site I used HTML, CSS, CSS grid, transitions,
-                    and Javascript.
+                    I used HTML, CSS, CSS grid, transitions, and Javascript to
+                    build this site.
                   </p>
                   <button class="btn about-button" type="submit" class="launch">
                     <a
@@ -249,10 +251,10 @@
                 <div class="card-body">
                   <h5 class="card-title">Weather Page</h5>
                   <p class="card-text">
-                    To build this site I used HTML, CSS, and Javascript. I also
+                    I used HTML, CSS, and Javascript to build this site. I also
                     used an integrated weather API. On load this site has
-                    current info for Lincoln, Ne but once you enter a city the
-                    page changes based on that citys current information.
+                    current info for Lincoln, Nebraska but once you enter a city
+                    the page changes based on that citys current information.
                   </p>
                   <button class="btn about-button" type="submit">
                     <a
