updated projects link

--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
                   betting!
                 </p>
                 <button type="button" class="btn btn-pink contact-button">
-                  <a href="about.html#email"> See My Projects</a>
+                  <a href="projects.html" title="Projects"> See My Projects</a>
                 </button>
               </div>
             </div>
