--- a/about.html
+++ b/about.html
@@ -128,6 +128,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">Projects</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact Me</a>
+                </li>
               </ul>
             </div>
           </div>
