--- a/index.html
+++ b/index.html
@@ -140,16 +140,19 @@
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact Me</a>
+              </li>
             </ul>
           </div>
         </div>
       </nav>
       <br />
       <br />
-      <h1>🤘Hi, I am</h1>
+      <h1>Hi, I am</h1>
       <h2>Alesia Shope</h2>
       <h3>
-        🇺🇸Front End Developer, based in
+        Front End Developer, based in
         <div class="huskers">Nebraska!</div>
       </h3>
 
