--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
   <body>
     <div class="container">
       <header>
-        <nav class="navbar navbar-expand-lg navbar-pink">
+        <nav class="navbar navbar-expand-lg navbar-pink sticky-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"> Alesia Shope</a>
             <button
@@ -115,15 +115,12 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="index.html"
+                  <a class="nav-link" aria-current="page" href="index.html"
                     >Home</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About Me</a>
+                  <a class="nav-link active" href="about.html"> About Me</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="projects.html">Projects</a>
