--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,11 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Page</title>
@@ -45,7 +50,7 @@
   <body>
     <div class="container">
       <header>
-        <nav class="navbar navbar-expand-lg navbar-pink">
+        <nav class="navbar navbar-expand-lg navbar-pink sticky-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"> Alesia Shope</a>
             <button
@@ -62,10 +67,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="index.html"
+                  <a class="nav-link" aria-current="page" href="index.html"
                     >Home</a
                   >
                 </li>
@@ -76,7 +78,7 @@
                   <a class="nav-link" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Me</a>
+                  <a class="nav-link active" href="contact.html">Contact Me</a>
                 </li>
               </ul>
             </div>
