--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-pink">
+      <nav class="navbar navbar-expand-lg navbar-pink sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Alesia Shope</a>
           <button
