--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,9 @@
         color: #ee75b3;
         border: solid 3px;
       }
+       body{
+        background: none;
+      }
     </style>
   </head>
   <body>
