--- a/projects.html
+++ b/projects.html
@@ -45,8 +45,9 @@
         color: #ee75b3;
         border: solid 3px;
       }
-      body{
+       body{
         background: none;
+        background-image: none;
       }
     </style>
   </head>
