--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,7 @@
     <title>Project Page</title>
     <style>
       :root {
-        --primary-color:  color: hsl(0 0% 100% / 0.2);
-        background-clip: text;
-        background-image: linear-gradient(pink, magenta, blue);
+        --primary-color: blue;
         --secondary-color: #ee75b3;
         --text-align: center;
       }
@@ -34,20 +32,16 @@
         font-size: 70px;
         text-align: var(--text-align);
       }
-      .card{
+      .card {
         border: none;
-        text-align: center
+        text-align: center;
       }
-      .card-title{
+      .card-title {
         font-size: 30px;
       }
       hr {
         color: #ee75b3;
         border: solid 3px;
-      }
-       body{
-        background: none;
-        background-image: none;
       }
     </style>
   </head>
