--- a/about.html
+++ b/about.html
@@ -16,6 +16,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me - Alesia Shope</title>
     <meta name="description" content="about me page of my portfolio" />
+    <meta
+      name="description"
+      content="Alesia Shope is a front end Developer based in Nebraska! Check out my projects and contact me."
+    />
     <style>
       :root {
         --primary-color: teal;
@@ -98,7 +102,7 @@
   <body>
     <div class="container">
       <header>
-        <nav class="navbar navbar-expand-lg navbar-pink sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-pink fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"> Alesia Shope</a>
             <button
@@ -115,18 +119,28 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="index.html"
+                  <a
+                    class="nav-link"
+                    aria-current="page"
+                    title="homepage"
+                    href="index.html"
                     >Home</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="about.html"> About Me</a>
+                  <a class="nav-link active" title="about" href="about.html">
+                    About Me</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="projects.html">Projects</a>
+                  <a class="nav-link" title="projects" href="projects.html"
+                    >Projects</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Me</a>
+                  <a class="nav-link" title="contact" href="contact.html"
+                    >Contact Me</a
+                  >
                 </li>
               </ul>
             </div>
