--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,11 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <meta name="description" content="Projects page of my portfolio" />
+    <meta
+      name="description"
+      content="Alesia Shope is a front end Developer based in Nebraska! Check out my projects and contact me."
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Page</title>
@@ -48,7 +53,7 @@
   <body>
     <div class="container">
       <header>
-        <nav class="navbar navbar-expand-lg navbar-pink sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-pink fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"> Alesia Shope</a>
             <button
@@ -65,18 +70,31 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="index.html"
+                  <a
+                    class="nav-link"
+                    aria-current="page"
+                    title="homepage"
+                    href="index.html"
                     >Home</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About Me</a>
+                  <a class="nav-link" title="about" href="about.html">
+                    About Me</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="projects.html">Projects</a>
+                  <a
+                    class="nav-link active"
+                    title="projects"
+                    href="projects.html"
+                    >Projects</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Me</a>
+                  <a class="nav-link" title="contact" href="contact.html"
+                    >Contact Me</a
+                  >
                 </li>
               </ul>
             </div>
