--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,9 @@
         color: #ee75b3;
         border: solid 3px;
       }
+      body {
+        margin: 0 auto;
+      }
     </style>
   </head>
   <body>
