--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
     />
     <style>
       :root {
-        --primary-color:  color: hsl(0 0% 100% / 0.2);
-        background-clip: text;
-        background-image: linear-gradient(pink, magenta, blue);
+        --primary-color: blue
         --secondary-color: #ee75b3;
         --text-align: center;
       }
