--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
         border: solid 3px;
       }
       body {
-        margin: 0 auto;
+        margin-top: 50px;
       }
     </style>
   </head>
