--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,9 @@
         color: #ee75b3;
         border: solid 3px;
       }
+      body {
+        margin-top: 80px;
+      }
     </style>
   </head>
   <body>
