--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       }
       body {
         margin: 0px auto;
+        margin-top: 50px;
       }
       h1 {
         color: pink;
@@ -56,14 +57,20 @@
         margin: 0 auto;
       }
       .contact-button {
-        background-color: var(--secondary-color);
+        background-color: pink;
         border-radius: 10px;
         font-size: 25px;
+      }
+      .contact-button:hover{
+        background-color: lightpink;
       }
       .about-button {
         background-color: pink;
         border-radius: 10px;
         font-size: 25px;
+      }
+       .about-button:hover{
+        background-color: lightpink;
       }
       .nav-buttons {
         padding: 40px 40px 40px 40px;
