updated contact page

--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,13 @@
       body {
         margin-top: 70px;
       }
+      h2 {
+        color: #ee75b3;
+        text-align: center;
+      }
+      p {
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -101,7 +108,43 @@
           </div>
         </nav>
       </header>
-      <h1>Contact Page</h1>
+      <h1>Contact Me and Follow Me</h1>
+      <br />
+      <h2>Email</h2>
+      <p>alesianicoleg@gmail.com</p>
+      <h2>Github</h2>
+      <p>
+        <a href="https://github.com/avsangel" target="_blank" title="my Github">
+          avsangel
+        </a>
+      </p>
+      <h2>Instagram</h2>
+      <p>
+        <a
+          href="https://www.instagram.com/alesiascodingjourney/"
+          target="_blank"
+          title="my coding journey"
+          >alesiascodingjourney</a
+        >
+      </p>
+      <h2>Youtube</h2>
+      <p>
+        <a
+          href="https://www.youtube.com/@Alesias-Coding-Journey"
+          target="_blank"
+          title="my coding youtube"
+          >alesiascodingjourney
+        </a>
+      </p>
+      <h2>Etsy</h2>
+      <p>
+        <a
+          href="https://turacocreations.etsy.com"
+          target="_blank"
+          title="my etsy shop"
+          >Turaco Creations
+        </a>
+      </p>
 
       <hr />
     </div>
