--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
     />
     <style>
       :root {
-        --primary-color: blue
-        --secondary-color: #ee75b3;
         --text-align: center;
       }
       body {
@@ -61,7 +59,7 @@
         border-radius: 10px;
         font-size: 25px;
       }
-      .contact-button:hover{
+      .contact-button:hover {
         background-color: lightpink;
       }
       .about-button {
@@ -69,7 +67,7 @@
         border-radius: 10px;
         font-size: 25px;
       }
-       .about-button:hover{
+      .about-button:hover {
         background-color: lightpink;
       }
       .nav-buttons {
@@ -105,6 +103,7 @@
         border: solid 3px;
       }
       .card {
+        text-align: center;
         border: none;
       }
       @media (max-width: 575.98px) {
