--- a/about.html
+++ b/about.html
@@ -14,6 +14,10 @@
     ></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/01a116fc79.js"
+      crossorigin="anonymous"
+    ></script>
     <title>About Me - Alesia Shope</title>
     <meta name="description" content="about me page of my portfolio" />
     <meta
@@ -70,11 +74,7 @@
         text-align: center;
         color: black;
       }
-      .email {
-        padding: 0;
-        font-size: 30px;
-        text-decoration: none;
-      }
+
       .navbar-pink {
         background-color: pink;
       }
@@ -83,9 +83,7 @@
         background-clip: text;
         background-image: linear-gradient(black, silver, red);
       }
-      .pics {
-        border: white solid 3px;
-      }
+
       .card{
         border: none;
         text-align: center
@@ -97,6 +95,17 @@
         background-color: pink;
         border-radius: 10px;
         font-size: 25px;
+      }
+        .email {
+        text-align: center;
+      }
+      .socials {
+        text-align: center;
+      }
+      .socials a {
+        margin: 0 20px;
+        font-size: 20px;
+        color: #ee75b3;
       }
     </style>
   </head>
@@ -185,12 +194,47 @@
       </div>
       <br />
 
-      <h3 id="Contact">Contact Me</h3>
-      <div class="email">
-        <a href="mailto:alesianicoleg@gmail.com" id="email" title="email">
-          alesianicoleg@gmail.com</a
-        >
-      </div>
+      <footer>
+        <div class="email mb-3">alesianicoleg@gmail.com</div>
+        <div class="socials d-flex">
+          <a
+            href="https://github.com/avsangel"
+            target="_blank"
+            title="my Github"
+          >
+            <i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/alesiashope711/"
+            target="_blank"
+            title="my Linkedin"
+          >
+            <i class="fa-brands fa-linkedin"></i
+          ></a>
+
+          <a
+            href="https://www.instagram.com/alesiascodingjourney/"
+            target="_blank"
+            title="my coding journey"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.youtube.com/@Alesias-Coding-Journey"
+            target="_blank"
+            title="my coding youtube"
+          >
+            <i class="fa-brands fa-youtube"></i
+          ></a>
+          <a
+            href="https://turacocreations.etsy.com"
+            target="_blank"
+            title="my etsy shop"
+          >
+            <i class="fa-brands fa-etsy"></i
+          ></a>
+        </div>
+      </footer>
       <hr />
     </div>
   </body>
