--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,10 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/01a116fc79.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Project Page</title>
     <style>
       :root {
@@ -176,6 +180,47 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="email mb-3">alesianicoleg@gmail.com</div>
+        <div class="socials">
+          <a
+            href="https://github.com/avsangel"
+            target="_blank"
+            title="my Github"
+          >
+            <i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/alesiashope711/"
+            target="_blank"
+            title="my Linkedin"
+          >
+            <i class="fa-brands fa-linkedin"></i
+          ></a>
+
+          <a
+            href="https://www.instagram.com/alesiascodingjourney/"
+            target="_blank"
+            title="my coding journey"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.youtube.com/@Alesias-Coding-Journey"
+            target="_blank"
+            title="my coding youtube"
+          >
+            <i class="fa-brands fa-youtube"></i
+          ></a>
+          <a
+            href="https://turacocreations.etsy.com"
+            target="_blank"
+            title="my etsy shop"
+          >
+            <i class="fa-brands fa-etsy"></i
+          ></a>
+        </div>
+      </footer>
       <hr />
     </div>
   </body>
