--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,11 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project Page</title>
+    <script
+      src="https://kit.fontawesome.com/01a116fc79.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Contact Page</title>
     <style>
       :root {
         --primary-color: blue;
@@ -57,6 +61,17 @@
       }
       p {
         text-align: center;
+      }
+      .email {
+        text-align: center;
+      }
+      .socials {
+        text-align: center;
+      }
+      .socials a {
+        margin: 0 20px;
+        font-size: 20px;
+        color: #ee75b3;
       }
     </style>
   </head>
@@ -118,6 +133,16 @@
           avsangel
         </a>
       </p>
+      <h2>Linkedin</h2>
+      <p>
+        <a
+          href="https://www.linkedin.com/in/alesiashope711/"
+          target="_blank"
+          title="my Linkedin"
+        >
+          avsangel
+        </a>
+      </p>
       <h2>Instagram</h2>
       <p>
         <a
@@ -145,7 +170,47 @@
           >Turaco Creations
         </a>
       </p>
+      <footer>
+        <div class="email mb-3">alesianicoleg@gmail.com</div>
+        <div class="socials">
+          <a
+            href="https://github.com/avsangel"
+            target="_blank"
+            title="my Github"
+          >
+            <i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/alesiashope711/"
+            target="_blank"
+            title="my Linkedin"
+          >
+            <i class="fa-brands fa-linkedin"></i
+          ></a>
 
+          <a
+            href="https://www.instagram.com/alesiascodingjourney/"
+            target="_blank"
+            title="my coding journey"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.youtube.com/@Alesias-Coding-Journey"
+            target="_blank"
+            title="my coding youtube"
+          >
+            <i class="fa-brands fa-youtube"></i
+          ></a>
+          <a
+            href="https://turacocreations.etsy.com"
+            target="_blank"
+            title="my etsy shop"
+          >
+            <i class="fa-brands fa-etsy"></i
+          ></a>
+        </div>
+      </footer>
       <hr />
     </div>
   </body>
