--- a/about.html
+++ b/about.html
@@ -99,13 +99,11 @@
         .email {
         text-align: center;
       }
-      .socials {
-        text-align: center;
-      }
       .socials a {
         margin: 0 20px;
         font-size: 20px;
         color: #ee75b3;
+        display: inline-flex
       }
     </style>
   </head>
@@ -193,10 +191,9 @@
         </div>
       </div>
       <br />
-
       <footer>
         <div class="email mb-3">alesianicoleg@gmail.com</div>
-        <div class="socials d-flex">
+        <div class="socials text-center">
           <a
             href="https://github.com/avsangel"
             target="_blank"
