--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
           text-align: center;
         }
       }
+      .email {
+        text-align: center;
+      }
+      .socials {
+        text-align: center;
+      }
+      .socials a {
+        margin: 0 20px;
+        font-size: 20px;
+        color: #ee75b3;
+      }
     </style>
   </head>
   <body>
@@ -296,6 +307,7 @@
           </div>
         </div>
       </div>
+      <br />
       <footer>
         <div class="email mb-3">alesianicoleg@gmail.com</div>
         <div class="socials">
