--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,17 @@
       body {
         margin-top: 70px;
       }
+      .email {
+        text-align: center;
+      }
+      .socials {
+        text-align: center;
+      }
+      .socials a {
+        margin: 0 20px;
+        font-size: 20px;
+        color: #ee75b3;
+      }
     </style>
   </head>
   <body>
