--- a/about.html
+++ b/about.html
@@ -98,6 +98,7 @@
       }
         .email {
         text-align: center;
+         color: #ee75b3;
       }
       .socials a {
         margin: 0 20px;
