--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
       src="https://kit.fontawesome.com/01a116fc79.js"
       crossorigin="anonymous"
     ></script>
-    <title>Front End Developer Alesia Shope</title>
-    <meta
-      name="description"
-      content="The main page and about page of my portfolio"
-    />
+    <title>Front End Developer - Alesia Shope</title>
+    <meta name="description" content="The main page of my portfolio" />
     <meta
       name="description"
       content="Alesia Shope is a front end Developer based in Nebraska! Check out my projects and contact me."
@@ -123,6 +120,7 @@
       }
       .email {
         text-align: center;
+        color: #ee75b3;
       }
       .socials {
         text-align: center;
