--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
       src="https://kit.fontawesome.com/01a116fc79.js"
       crossorigin="anonymous"
     ></script>
-    <title>Project Page</title>
+    <title>Project Page - Alesia Shope</title>
     <style>
       :root {
         --primary-color: blue;
@@ -57,6 +57,7 @@
       }
       .email {
         text-align: center;
+        color: #ee75b3;
       }
       .socials {
         text-align: center;
