--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       src="https://kit.fontawesome.com/01a116fc79.js"
       crossorigin="anonymous"
     ></script>
-    <title>Contact Page</title>
+    <title>Contact Page - Alesia Shope</title>
     <style>
       :root {
         --primary-color: blue;
@@ -64,6 +64,7 @@
       }
       .email {
         text-align: center;
+        color: #ee75b3;
       }
       .socials {
         text-align: center;
