--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,12 @@
         font-size: 20px;
         color: #ee75b3;
       }
+      .closing {
+        color: #ee75b3;
+        font-size: 15px;
+        text-align: center;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
@@ -171,6 +177,7 @@
           >Turaco Creations
         </a>
       </p>
+      <br />
       <footer>
         <div class="email mb-3">alesianicoleg@gmail.com</div>
         <div class="socials">
@@ -210,6 +217,16 @@
           >
             <i class="fa-brands fa-etsy"></i
           ></a>
+        </div>
+        <div class="closing">
+          This project was coded by Alesia Shope and is opem-sourced on
+          <a
+            class="closing"
+            href="https://github.com/avsangel/class3-week2homework"
+            target="_blank"
+            title="project"
+            >github</a
+          >
         </div>
       </footer>
       <hr />
