--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
         font-size: 20px;
         color: #ee75b3;
       }
+      .closing {
+        color: #ee75b3;
+        font-size: 15px;
+        text-align: center;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
@@ -345,6 +351,16 @@
           >
             <i class="fa-brands fa-etsy"></i
           ></a>
+        </div>
+        <div class="closing">
+          This project was coded by Alesia Shope and is opem-sourced on
+          <a
+            class="closing"
+            href="https://github.com/avsangel/class3-week2homework"
+            target="_blank"
+            title="project"
+            >github</a
+          >
         </div>
       </footer>
       <hr />
