--- a/projects.html
+++ b/projects.html
@@ -46,11 +46,17 @@
         text-align: center;
       }
       .card-title {
+        color: hsl(0 0% 100% / 0.2);
+        background-clip: text;
+        background-image: linear-gradient(pink, magenta, blue);
         font-size: 30px;
       }
       hr {
         color: #ee75b3;
         border: solid 3px;
+      }
+      p {
+        color: blue;
       }
       body {
         margin-top: 70px;
@@ -66,6 +72,12 @@
         margin: 0 20px;
         font-size: 20px;
         color: #ee75b3;
+      }
+      .closing {
+        color: #ee75b3;
+        font-size: 15px;
+        text-align: center;
+        text-decoration: none;
       }
     </style>
   </head>
@@ -231,6 +243,16 @@
           >
             <i class="fa-brands fa-etsy"></i
           ></a>
+        </div>
+        <div class="closing">
+          This project was coded by Alesia Shope and is opem-sourced on
+          <a
+            class="closing"
+            href="https://github.com/avsangel/class3-week2homework"
+            target="_blank"
+            title="project"
+            >github</a
+          >
         </div>
       </footer>
       <hr />
